# branch-naming-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  branch_naming_hook.py  pyproject.toml  validate-branch.sh
tests/: test_branch_naming_hook.py
